// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Game displays a cat's game 1`] = `
<div
  className="game"
>
  <div
    className="game-board"
  >
    <Board
      onClick={[Function]}
      squares={
        Array [
          Array [
            "X",
            "O",
            "X",
          ],
          Array [
            "X",
            "O",
            "X",
          ],
          Array [
            "O",
            "X",
            "O",
          ],
        ]
      }
    />
  </div>
  <div
    className="game-info"
  >
    <div>
      Cat's Game
    </div>
    <ol>
      <li
        key="0"
      >
        <a
          href="#"
          onClick={[Function]}
        >
           
          Game Start
           
        </a>
      </li>
    </ol>
  </div>
</div>
`;

exports[`Game displays a new game 1`] = `
<div
  className="game"
>
  <div
    className="game-board"
  >
    <Board
      onClick={[Function]}
      squares={
        Array [
          Array [
            null,
            null,
            null,
          ],
          Array [
            null,
            null,
            null,
          ],
          Array [
            null,
            null,
            null,
          ],
        ]
      }
    />
  </div>
  <div
    className="game-info"
  >
    <div>
      Next player: X
    </div>
    <ol>
      <li
        key="0"
      >
        <a
          href="#"
          onClick={[Function]}
        >
           
          Game Start
           
        </a>
      </li>
    </ol>
  </div>
</div>
`;
